--- a/test/b/rns/config
+++ b/test/b/rns/config
@@ -14,7 +14,7 @@
   [[WebRTC Tester B]]
     type = PipeInterface
     enabled = True
-    command = "node ./pipe.js ws://0.0.0.0:8080"
+    command = "node ./pipe.js wss://signal.konsumer.workers.dev/ws/reticulum"
     respawn_delay = 5
     outgoing = True
     mode = full
