make pipe optionally log, for debugging

--- a/test/a/rns/config
+++ b/test/a/rns/config
@@ -14,7 +14,7 @@
   [[WebRTC Tester A]]
     type = PipeInterface
     enabled = True
-    command = "node ./pipe.js wss://signal.konsumer.workers.dev/ws/reticulum"
+    command = "node ./pipe.js wss://signal.konsumer.workers.dev/ws/reticulum test/a/rns/storage/socket.txt"
     respawn_delay = 5
     outgoing = True
     mode = full
